# virt-maker

./: .gitignore  .project  Dockerfile  LICSENSE  README.MD  README.md  install  install-docker  install-online  install-safe  pyproject.toml  requirements.txt  setup.py  test.sh  test.vmk  virt-maker.py
baseimages/: centos-base.vmk  fedora-base.vmk  ubuntu-base.vmk
builtin/: centos-6.vmk  centos-7.vmk
examples/: centos-based-gateway.vbp  centos-behind-gateway.vbp  create-env.vmk  example-1.vmk  foreman.vbp  from.vbp  jinja-example-basic.vbp  jinja-example-jenkins.vbp  openstack-installer.vbp  packetfence.vmk  simple-foreman.vbp  simple.vbp
examples/10-basic/: README.md  template.yml
examples/20-using_params/: README.md  template.yml
examples/30-using_filters/: README.md  template.yml
examples/40-export_scripts/: README.md  template.yml
examples/50-export_compression/: README.md  template.yml
examples/60-to_and_from/: README.md  from.yml  template.yml  to.yml
examples/70-near_world_example/: README.md  base.yml  finalize.yml  (+1 more)
providers/: cache.py  catalog.py  copy.py  create.py  createova.py  delete.py  deploy.py  download.py  export.py  file.py  from.py  glance-devel.py  glance.py  hostname.py  import.py  install.py  localscript.py  net-define.py  password.py  qemu-img.py  require.py  resethwaddr.py  roothash.py  rootpass.py  run.py  script.py  selinux.py  shell.py  slack.py  store.py  sysprep.py  test.py  update.py  virsh.py  virt-builder.py  virt-customize.py  virt-install.py  virt-resize.py  virt-sysprep.py
virt-maker/: __init__.py  __init__.py.save
(+51 files in other folders)
